# medinria-boutiques

./: .gitignore  README.md  invocation.json  main.py
cpp/: bosh  boutiques-gui-settings.json  convertToMedInriaPlugin.py  preferredFormats.json
cpp/boutiques/: bosh.py
cpp/src/: CMakeLists.txt  abstractfilehandler.cpp  abstractfilehandler.h  comboboxdelegate.cpp  comboboxdelegate.h  configuration.h  dropwidget.cpp  dropwidget.h  executionwidget.cpp  executionwidget.h  filehandler.cpp  filehandler.h  installer.cpp  installer.h  invocationguiwidget.cpp  invocationguiwidget.h  invocationwidget.cpp  invocationwidget.h  mainwindow.cpp  mainwindow.h  searchtoolswidget.cpp  searchtoolswidget.h  toolboxwidget.cpp  toolboxwidget.h
python/app/: main.py
